# tiktok-chef-backend

./: .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  main.py  pyproject.toml  pytest.ini  test_api.py
.devcontainer/: Dockerfile  devcontainer.json
docs/: PRD.md
src/: __init__.py  agent.py  config.py  crud.py  database.py  graph.py  logger.py  models.py  schema.py  tools.py  utils.py
static/: index.html
supabase/: create_schema.sql  drop_tables.sql
tests/: conftest.py  test_api.py  test_endpoints.py  test_update.py
validation/: run_evaluation.py  test_data.py
